--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.companyname.chatapp.chatapp.ChatsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/chats_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="chats" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
