--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,12 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="108dp"
-        android:height="108dp"
-        android:viewportWidth="42.857143"
-        android:viewportHeight="42.857143">
-    <group android:translateX="9.428572"
-            android:translateY="9.428572">
+    android:width="108dp"
+    android:height="108dp"
+    android:autoMirrored="true"
+    android:viewportHeight="42.857143"
+    android:viewportWidth="42.857143">
+    <group
+        android:translateX="9.428572"
+        android:translateY="9.428572">
         <path
             android:fillColor="#FF000000"
-            android:pathData="M21,3L3,10.53v0.98l6.84,2.65L12.48,21h0.98L21,3z"/>
+            android:pathData="M21,3L3,10.53v0.98l6.84,2.65L12.48,21h0.98L21,3z" />
     </group>
 </vector>
