--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.companyname.chatapp.chatapp.RegisterActivity">
+    tools:context="com.companyname.chatapp.chatapp.Activities.RegisterActivity">
 
     <include
         android:id="@+id/login_toolbar"
@@ -31,7 +31,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress" />
     </android.support.design.widget.TextInputLayout>
 
@@ -49,7 +49,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="346dp"
             android:layout_height="wrap_content"
-            android:hint="password"
+            android:hint="@string/password"
             android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
 
@@ -60,7 +60,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:text="login"
+        android:text="@string/login"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:background="@color/colorPrimary"
@@ -77,7 +77,7 @@
         android:layout_marginEnd="214dp"
         android:layout_marginStart="26dp"
         android:layout_marginTop="20dp"
-        android:text="login to your account"
+        android:text="@string/login_to_your_account"
         android:textColorLink="@android:color/background_dark"
         android:textSize="24dp"
         android:textStyle="bold"
