--- a/app/src/main/res/layout/chat_custom_bar.xml
+++ b/app/src/main/res/layout/chat_custom_bar.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="Display Name"
+        android:text="@string/display_name"
         android:textColor="@android:color/white"
         android:textSize="18dp" />
 
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/custom_bar_name"
-        android:text="last seen"
+        android:text="@string/last_seen"
         android:textColor="@android:color/white"
         android:textSize="15dp" />
 </RelativeLayout>
