--- a/app/src/main/res/layout/users_single_layout.xml
+++ b/app/src/main/res/layout/users_single_layout.xml
@@ -20,7 +20,7 @@
         android:layout_toEndOf="@+id/user_single_image"
         android:textColor="@android:color/black"
         android:textSize="18dp"
-        android:text="Display Name" />
+        android:text="@string/display_name" />
 
     <TextView
         android:id="@+id/user_single_status"
@@ -29,7 +29,7 @@
         android:layout_below="@+id/user_single_name"
         android:layout_toEndOf="@+id/user_single_image"
         android:layout_marginTop="11dp"
-        android:text="user default status" />
+        android:text="@string/user_default_status" />
 
     <ImageView
         android:id="@+id/user_single_online_icon"
