--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:scaleType="fitXY"
+        android:contentDescription="@string/profile_image_view"
         app:srcCompat="@drawable/ic_person_black_24dp" />
     <TextView
         android:id="@+id/profile_display_name"
