--- a/app/src/main/res/layout/chat_custom_bar.xml
+++ b/app/src/main/res/layout/chat_custom_bar.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/custom_bar_name"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
