--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,11 +4,11 @@
 
     <item
         android:id="@+id/account_settings_item"
-        android:title="Account Settings" />
+        android:title="@string/account_settings" />
     <item
         android:id="@+id/all_users_item"
-        android:title="All Users" />
+        android:title="@string/all_users" />
     <item
         android:id="@+id/main_logout_item"
-        android:title="log Out" />
+        android:title="@string/log_out" />
 </menu>
