--- a/app/src/main/res/layout/chat_app_widget.xml
+++ b/app/src/main/res/layout/chat_app_widget.xml
@@ -1,43 +1,42 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:padding="@dimen/widget_margin">
+    android:layout_margin="@dimen/widget_margin">
 
-    <TextView
-        android:id="@+id/appwidget_user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/appWidget_profile_picture"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background0"
+        android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/widget_layout_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/background1"
+            android:orientation="horizontal"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp">
+            <ImageView
+                android:id="@+id/widget_img_launcher"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/ic_launcher"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/latest_chats"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/black"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textStyle="bold"
+                android:paddingStart="15dp"/>
+        </LinearLayout>
+        <ListView
+            android:id="@+id/widget_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/appwidget_user_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
-        android:textStyle="bold|italic"
-        android:layout_marginStart="20dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/appwidget_user_name"
-        app:layout_constraintTop_toBottomOf="@id/appwidget_user_name" />
-
-    <ImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/appWidget_profile_picture"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:contentDescription="@string/widget_profile_image"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
-
-
-</RelativeLayout>
+</FrameLayout>
